--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -12,6 +12,9 @@
               <a routerLink="../add" class="nav-link" routerLinkActive="active">Add Employee</a>
           </li>
           <li class="nav-item">
+              <a routerLink="../sikel" class="nav-link" routerLinkActive="active">Sikel</a>
+          </li>
+          <li class="nav-item">
               <a class="btn btn-primary" routerLinkActive="active" (click)="logout()">Logout</a>
           </li>
         </ul>
@@ -29,7 +32,17 @@
     </div>
   </div>
 
-  <div class="panel-body">
+  <div class="panel-body mt-5">
+   
+      <div class="float_right">
+        <form>
+          <div class="form-group">
+            <input type="text" name="search" placeholder="Masukkan nama...">
+            <input type="button" class="btn btn-primary btn-xs" value="Cari">
+          </div>
+        </form>
+      </div>
+
     <table class="table table-striped">
       <thead>
         <tr>
@@ -51,6 +64,7 @@
           </td>
         </tr>
       </tbody>
+      <ngb-pagination [collectionSize]="totalCount" [pageSize]="limit" [(page)]="page" aria-label="Default pagination" (pageChange)="reloadData()"></ngb-pagination>
     </table>
   </div>
 
